export interface IInspectionSheetRepository {

}